--- a/.github/workflows/cicd_workflow.yml
+++ b/.github/workflows/cicd_workflow.yml
@@ -1,15 +1,17 @@
 name: Docker Image CI for GHCR
+
 on:
   push
 
 jobs:
   build_and_publish:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Set up JDK 1.17
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
@@ -21,17 +23,17 @@ jobs:
       - name: Run the unit tests
         run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
 
-      - name: Report
-        uses: dorny/test-reporter@v1
-        if: always()
-        with:
-          name: Maven Tests
-          path: target/surefire-reports/*.xml
-          reporter: java-junit
-          fail-on-error: true
+      #      - name: Report test results
+      #        uses: dorny/test-reporter@v1
+      #        if: always()
+      #        with:
+      #          name: Maven Tests
+      #          path: target/surefire-reports/*.xml
+      #          reporter: java-junit
+      #          fail-on-error: true
 
       - name: Build and push the image
         run: |
-          docker login --username kelle128 --password ${{secrets.ACCESS_TOKEN}} ghcr.io
-          docker build -t ghcr.io/kelle128/primes-service:latest --file Dockerfile .  
-          docker push ghcr.io/kelle128/primes-service:latest 
+          echo "${{ secrets.ACCESS_TOKEN }}" | docker login ghcr.io -u kelle128 --password-stdin  
+          docker build -t ghcr.io/kelle128/prime-service:latest --file Dockerfile .  
+          docker push ghcr.io/kelle128/prime-service:latest
