--- a/.github/workflows/cicd_workflow.yml
+++ b/.github/workflows/cicd_workflow.yml
@@ -6,19 +6,16 @@ on:
 jobs:
   build_and_publish:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write  # Required to push to GHCR
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4  # Updated version
+        uses: actions/checkout@v1
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3  # Updated version
+        uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
           java-version: '17'
+          distribution: 'adopt'
 
       - name: Build the package
         run: mvn --batch-mode -DskipTests package
@@ -26,11 +23,17 @@ jobs:
       - name: Run the unit tests
         run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
 
-      - name: Log in to GHCR
-        run: echo "${{ secrets.ACCESS_TOKEN }}" | docker login ghcr.io -u kelle --password-stdin
+      #      - name: Report test results
+      #        uses: dorny/test-reporter@v1
+      #        if: always()
+      #        with:
+      #          name: Maven Tests
+      #          path: target/surefire-reports/*.xml
+      #          reporter: java-junit
+      #          fail-on-error: true
 
-      - name: Build and push the Docker image
+      - name: Build and push the image
         run: |
-          IMAGE_NAME=ghcr.io/kelle/prime-service:latest
-          docker build -t $IMAGE_NAME --file Dockerfile .
-          docker push $IMAGE_NAME
+          echo "${{ secrets.ACCESS_TOKEN }}" | docker login ghcr.io -u kelle --password-stdin  
+          docker build -t ghcr.io/kelle/prime-service:latest --file Dockerfile .  
+          docker push ghcr.io/kelle /prime-service:latest
