--- a/.github/workflows/cicd_workflow.yml
+++ b/.github/workflows/cicd_workflow.yml
@@ -1,17 +1,15 @@
 name: Docker Image CI for GHCR
-
 on:
   push
 
 jobs:
   build_and_publish:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Set up JDK 17
+      - name: Set up JDK 1.17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
@@ -23,17 +21,17 @@ jobs:
       - name: Run the unit tests
         run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
 
-      #      - name: Report test results
-      #        uses: dorny/test-reporter@v1
-      #        if: always()
-      #        with:
-      #          name: Maven Tests
-      #          path: target/surefire-reports/*.xml
-      #          reporter: java-junit
-      #          fail-on-error: true
+      - name: Report
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Maven Tests
+          path: target/surefire-reports/*.xml
+          reporter: java-junit
+          fail-on-error: true
 
       - name: Build and push the image
         run: |
-          echo "${{ secrets.ACCESS_TOKEN }}" | docker login ghcr.io -u kelle --password-stdin  
+          docker login --username kelle --password ${{secrets.ACCESS_TOKEN}} ghcr.io
           docker build -t ghcr.io/kelle/prime-service:latest --file Dockerfile .  
-          docker push ghcr.io/kelle /prime-service:latest
+          docker push ghcr.io/kelle/prime-service:latest
