--- a/.github/workflows/cicd_workflow.yml
+++ b/.github/workflows/cicd_workflow.yml
@@ -32,6 +32,6 @@ jobs:
 
       - name: Build and push the image
         run: |
-          docker login --username kelle --password ${{secrets.ACCESS_TOKEN}} ghcr.io
-          docker build -t ghcr.io/kelle/prime-service:latest --file Dockerfile .  
-          docker push ghcr.io/kelle/prime-service:latest
+          docker login --username Krisha34 --password ${{secrets.ACCESS_TOKEN}} ghcr.io
+          docker build -t ghcr.io/Krisha34/prime-service:latest --file Dockerfile .  
+          docker push ghcr.io/Krisha34/prime-service:latest
