Add distribution input for docker build-push-action

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,8 +45,6 @@ jobs:
       - name: Run tests
         run: ./gradlew test
 
-   
-
       - name: Build Docker image
         run: ./scripts/build-image.sh
 
@@ -62,3 +60,12 @@ jobs:
 
       - name: Deploy to AKS
         run: ./scripts/deploy.sh
+
+      # Added `distribution` for docker-related actions (if relevant)
+      - name: Docker Build and Push (if relevant)
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/YOUR_GITHUB_USERNAME/your-repo-name:latest
+          distribution: linux/amd64  # <- This is the required 'distribution' input
