--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Deploy to AKS
         run: ./scripts/deploy.sh
 
-      # Docker Build and Push (with distribution input)
+      # Docker Build and Push with Distribution specified
       - name: Docker Build and Push
         uses: docker/build-push-action@v2
         with:
