Fix Docker build-push action: Use platform instead of distribution

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,4 +67,8 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/YOUR_G_
+          tags: ghcr.io/YOUR_GITHUB_USERNAME/your-image:latest
+          # Specify distribution correctly here
+          platform: linux/amd64  # <-- This is the correct 'platform' input for the architecture
+
+
