--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,14 +1,11 @@
 name: Deploy Primes Service
-
 on:
   push:
     branches:
       - main
-
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-
     services:
       postgres:
         image: postgres
@@ -23,49 +20,66 @@ jobs:
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
-
     env:
       SPRING_DATASOURCE_URL: ${{ secrets.SPRING_DATASOURCE_URL }}
       SPRING_DATASOURCE_UN: ${{ secrets.SPRING_DATASOURCE_UN }}
       SPRING_DATASOURCE_PW: ${{ secrets.SPRING_DATASOURCE_PW }}
       SERVICE_VERSION: ${{ secrets.SERVICE_VERSION }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+        
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: '17'
-
+          
       - name: Build app
         run: ./gradlew build
-
+        
       - name: Run tests
         run: ./gradlew test
-
-      - name: Build Docker image
-        run: ./scripts/build-image.sh
-
-      - name: Push to GitHub Container Registry
-        run: ./scripts/push-to-ghcr.sh
-
-      - name: Push to Azure Container Registry
-        run: ./scripts/push-to-acr.sh
-
-      - name: Setup Kubectl
-        run: |
-          echo "${{ secrets.KUBE_CONFIG }}" | base64 --decode > $HOME/.kube/config
-
-      - name: Deploy to AKS
-        run: ./scripts/deploy.sh
-
-      # Corrected Docker Build and Push step with platform (architecture) input
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Login to Azure Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ secrets.ACR_REGISTRY }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+          
       - name: Docker Build and Push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ghcr.io/YOUR_GITHUB_USERNAME/your-image:latest
-          platform: linux/amd64  # This is the correct input for platform architecture
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/primes-service:latest
+            ghcr.io/${{ github.repository_owner }}/primes-service:${{ github.sha }}
+            ${{ secrets.ACR_REGISTRY }}/primes-service:latest
+            ${{ secrets.ACR_REGISTRY }}/primes-service:${{ github.sha }}
+          platforms: linux/amd64
+          
+      - name: Setup Kubectl
+        uses: azure/setup-kubectl@v3
+        
+      - name: Configure Kubernetes credentials
+        run: |
+          echo "${{ secrets.KUBE_CONFIG }}" | base64 --decode > $HOME/.kube/config
+          
+      - name: Deploy to AKS
+        run: |
+          # Set the image tag to use for deployment
+          export IMAGE_TAG=${{ github.sha }}
+          # Run the deployment script
+          ./scripts/deploy.sh
